Blender 2.8 Crashing on Alembic export of fluid animation past 80 frames #58686

Closed
opened 2018-12-04 06:28:43 +01:00 by Peter Gotlib · 21 comments

System Information
Operating system: Win 10
Graphics card: 2 GTX 1080 Ti, 1 GTX 780

Blender Version
2.8 Beta

Short description of error
Simple fluid sim with resolution of 235 and length of 280 frames is crashing blender on export to Alembic.
I am only able to get the export working if kept under 80 frames.

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).
Blender-2.8-Fluid-test.7z

**System Information** Operating system: Win 10 Graphics card: 2 GTX 1080 Ti, 1 GTX 780 **Blender Version** 2.8 Beta **Short description of error** Simple fluid sim with resolution of 235 and length of 280 frames is crashing blender on export to Alembic. I am only able to get the export working if kept under 80 frames. **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). [Blender-2.8-Fluid-test.7z](https://archive.blender.org/developer/F5807375/Blender-2.8-Fluid-test.7z)
Author

Added subscriber: @pegot

Added subscriber: @pegot

Added subscriber: @ZedDB

Added subscriber: @ZedDB

If I try export with a debug build I get the following assert:
BLI_assert failed: blender/source/blender/blenkernel/intern/DerivedMesh.c:2192, mesh_get_eval_final(), at 'ob->id.tag & LIB_TAG_COPIED_ON_WRITE'

However, that is not a fatal error. So with a release build, I seem to be able to export to alembic without any crashes (with a build from today).

Could you try a recent build and see if this is still an issue for you?

If I try export with a debug build I get the following assert: `BLI_assert failed: blender/source/blender/blenkernel/intern/DerivedMesh.c:2192, mesh_get_eval_final(), at 'ob->id.tag & LIB_TAG_COPIED_ON_WRITE'` However, that is not a fatal error. So with a release build, I seem to be able to export to alembic without any crashes (with a build from today). Could you try a recent build and see if this is still an issue for you?
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

should be investigated though

should be investigated though

@lichtwerk so can you reproduce this?

@lichtwerk so can you reproduce this?
Author

Unfortunately export to Alembic is still crashing for me on Blender Beta 2.8.

I tried 2 Beta versions, 2.8 dated December 23’rd 21:42 (hash e5e885d0ec) and January 23’rd 00:32 (hash dc3b5024be).

The 12/23 version crashed at about 16%. The 1/23 version crashed almost immediately, never getting past 1 or 2%.

Unfortunately export to Alembic is still crashing for me on Blender Beta 2.8. I tried 2 Beta versions, 2.8 dated December 23’rd 21:42 (hash e5e885d0ecb9) and January 23’rd 00:32 (hash dc3b5024be1a). The 12/23 version crashed at about 16%. The 1/23 version crashed almost immediately, never getting past 1 or 2%.

Added subscriber: @sebastientricoire

Added subscriber: @sebastientricoire

I have the same issue with the 2019-01-27 2.8 beta.
Pegot's scene crash around 28%
Mine at start (1%)

I have the same issue with the 2019-01-27 2.8 beta. Pegot's scene crash around 28% Mine at start (1%)

Added subscriber: @LazyDodo

Added subscriber: @LazyDodo

@LazyDodo can you reproduce this?

@LazyDodo can you reproduce this?
Member

Added subscriber: @Mets

Added subscriber: @Mets
Member

Win10 x64 (v1607) console output:

find_node component: Could not find ID OBIcosphere
add_node_handle_relation(Fluidsim Object) - Could not find op_from (ComponentKey(OBIcosphere, TRANSFORM))

Then it waits a few seconds, then it crashes with this:

Error   : EXCEPTION_ACCESS_VIOLATION
Address : 0x00007FF779532410
Module  : E:\3D\Blender\blender-2.80.0-git.8996e26116f0-windows64\blender.exe
Win10 x64 (v1607) console output: ``` find_node component: Could not find ID OBIcosphere add_node_handle_relation(Fluidsim Object) - Could not find op_from (ComponentKey(OBIcosphere, TRANSFORM)) ``` Then it waits a few seconds, then it crashes with this: ``` Error : EXCEPTION_ACCESS_VIOLATION Address : 0x00007FF779532410 Module : E:\3D\Blender\blender-2.80.0-git.8996e26116f0-windows64\blender.exe ```
Sybren A. Stüvel was assigned by Sebastian Parborg 2019-02-06 18:00:39 +01:00

While I can't reproduce this on my end, it seems like most windows users can. So I'll mark this as Normal

While I can't reproduce this on my end, it seems like most windows users can. So I'll mark this as `Normal`
Member

I can repro this with both the builds from the buildbot and local builds.

after disabling the problematic asserts i end up with this stack trace after a while

 	blender.exe!Alembic::Util::v10::MurmurHash3_x64_128(void const *,unsigned __int64,unsigned __int64,void *)	C++
 	blender.exe!Alembic::AbcCoreAbstract::v10::ArraySample::getKey(void)	C++
 	blender.exe!Alembic::AbcCoreOgawa::v10::ApwImpl::setSample(class Alembic::AbcCoreAbstract::v10::ArraySample const &)	C++
 	blender.exe!Alembic::Abc::v10::OArrayProperty::set(class Alembic::AbcCoreAbstract::v10::ArraySample const &)	C++
 	blender.exe!Alembic::AbcGeom::v10::SetPropUsePrevIfNull<class Alembic::Abc::v10::OTypedArrayProperty<struct Alembic::Abc::v10::V3fTPTraits>,class Alembic::Abc::v10::TypedArraySample<struct Alembic::Abc::v10::V3fTPTraits> >(class Alembic::Abc::v10::OTypedArrayProperty<struct Alembic::Abc::v10::V3fTPTraits>,class Alembic::Abc::v10::TypedArraySample<struct Alembic::Abc::v10::V3fTPTraits>)	C++
 	blender.exe!Alembic::AbcGeom::v10::OPolyMeshSchema::set(class Alembic::AbcGeom::v10::OPolyMeshSchema::Sample const &)	C++
>	blender.exe!AbcGenericMeshWriter::writeMesh(Mesh * mesh=0x000000000ae465e8) Line 457	C++

 	blender.exe!AbcGenericMeshWriter::do_write() Line 386	C++
 	blender.exe!AbcObjectWriter::write() Line 107	C++
 	blender.exe!AbcExporter::operator()(float & progress=0.353571415, bool & was_canceled=false) Line 333	C++
 	blender.exe!export_startjob(void * customdata=0x000000000a0bc038, short * stop=0x000000000a233cac, short * do_update=0x000000000a233caa, float * progress=0x000000000a233cb0) Line 271	C++
 	blender.exe!do_job_thread(void * job_v=0x000000000a233c38) Line 330	C
 	blender.exe!tslot_thread_start(void * tslot_p=0x0000000005e90cb8) Line 251	C
 	[External Code]	
I can repro this with both the builds from the buildbot and local builds. after disabling the problematic asserts i end up with this stack trace after a while ``` blender.exe!Alembic::Util::v10::MurmurHash3_x64_128(void const *,unsigned __int64,unsigned __int64,void *) C++ blender.exe!Alembic::AbcCoreAbstract::v10::ArraySample::getKey(void) C++ blender.exe!Alembic::AbcCoreOgawa::v10::ApwImpl::setSample(class Alembic::AbcCoreAbstract::v10::ArraySample const &) C++ blender.exe!Alembic::Abc::v10::OArrayProperty::set(class Alembic::AbcCoreAbstract::v10::ArraySample const &) C++ blender.exe!Alembic::AbcGeom::v10::SetPropUsePrevIfNull<class Alembic::Abc::v10::OTypedArrayProperty<struct Alembic::Abc::v10::V3fTPTraits>,class Alembic::Abc::v10::TypedArraySample<struct Alembic::Abc::v10::V3fTPTraits> >(class Alembic::Abc::v10::OTypedArrayProperty<struct Alembic::Abc::v10::V3fTPTraits>,class Alembic::Abc::v10::TypedArraySample<struct Alembic::Abc::v10::V3fTPTraits>) C++ blender.exe!Alembic::AbcGeom::v10::OPolyMeshSchema::set(class Alembic::AbcGeom::v10::OPolyMeshSchema::Sample const &) C++ > blender.exe!AbcGenericMeshWriter::writeMesh(Mesh * mesh=0x000000000ae465e8) Line 457 C++ blender.exe!AbcGenericMeshWriter::do_write() Line 386 C++ blender.exe!AbcObjectWriter::write() Line 107 C++ blender.exe!AbcExporter::operator()(float & progress=0.353571415, bool & was_canceled=false) Line 333 C++ blender.exe!export_startjob(void * customdata=0x000000000a0bc038, short * stop=0x000000000a233cac, short * do_update=0x000000000a233caa, float * progress=0x000000000a233cb0) Line 271 C++ blender.exe!do_job_thread(void * job_v=0x000000000a233c38) Line 330 C blender.exe!tslot_thread_start(void * tslot_p=0x0000000005e90cb8) Line 251 C [External Code] ```
Member

it's a use after free bug ASAN will catch it if you can't repro

https://developer.blender.org/diffusion/B/browse/master/source/blender/alembic/intern/abc_mesh.cc$447

over here the velocities variable goes out of scope, but m_mesh_sample retains a dangling pointer to it which later gets de-referenced which never leads to good things

moving the declaration of velocities of above the if (m_is_liquid) line fixes the issue for me.

but i'll let @dr.sybren judge if this is a proper fix or not.

it's a use after free bug ASAN will catch it if you can't repro https://developer.blender.org/diffusion/B/browse/master/source/blender/alembic/intern/abc_mesh.cc$447 over here the `velocities` variable goes out of scope, but `m_mesh_sample` retains a dangling pointer to it which later gets de-referenced which never leads to good things moving the declaration of velocities of above the `if (m_is_liquid)` line fixes the issue for me. but i'll let @dr.sybren judge if this is a proper fix or not.

Added subscriber: @artutava

Added subscriber: @artutava

Crashing here too while exporting fluid simulation to alembic.

Crashing here too while exporting fluid simulation to alembic.

This issue was referenced by 817e2796cb

This issue was referenced by 817e2796cbe4c6e115c8a4b6bf535017043be930

@LazyDodo looks like a good fix to me, I'll commit that soon.

Seems like a duplicate of #52814.

@LazyDodo looks like a good fix to me, I'll commit that soon. Seems like a duplicate of #52814.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
9 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58686
No description provided.